--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -1,2 +1,17 @@
 $icon-font-path: '../fonts/';
 
+$page-color: #393939;
+$gray-color: #858585;
+$border-color: #d8d8d8;
+$black-color: #111111;
+$blue-color: #3c4f90;
+
+body {
+	font-family: 'ApercuPro';
+	font-weight: 400;
+	background: #fff;
+	padding-right: 0 !important;
+}
+
+
+
