--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,70 +1,44 @@
 
 @font-face {
-  font-family: 'GothamPro';
-  src: url('../fonts/GothamPro-Light.eot');
-  src: url('../fonts/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/GothamPro-Light.woff') format('woff'),
-  url('../fonts/GothamPro-Light.ttf') format('truetype'),
-  url('../fonts/GothamPro-Light.svg#Intro') format('svg');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GothamPro';
-  src: url('../fonts/GothamPro-Italic.eot');
-  src: url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/GothamPro-Italic.woff') format('woff'),
-  url('../fonts/GothamPro-Italic.ttf') format('truetype'),
-  url('../fonts/GothamPro-Italic.svg#Intro') format('svg');  
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'GothamPro';
-  src: url('../fonts/GothamPro-Regular.eot');
-  src: url('../fonts/GothamPro-Regular.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/GothamPro-Regular.woff') format('woff'),
-  url('../fonts/GothamPro-Regular.ttf') format('truetype'),
-  url('../fonts/GothamPro-Regular.svg#Intro') format('svg');
+  font-family: 'ApercuPro';
+  src: url('../fonts/ApercuPro.eot');
+  src: url('../fonts/ApercuPro.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/ApercuPro.woff') format('woff'),
+  url('../fonts/ApercuPro.ttf') format('truetype'),
+  url('../fonts/ApercuPro.svg#Intro') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 
-
 @font-face {
-  font-family: 'GothamPro';
-  src: url('../fonts/GothamPro-Medium.eot');
-  src: url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/GothamPro-Medium.woff') format('woff'),
-  url('../fonts/GothamPro-Medium.ttf') format('truetype'),
-  url('../fonts/GothamPro-Medium.svg#Intro') format('svg');
-  font-weight: 600;
-  
+  font-family: 'ApercuPro';
+  src: url('../fonts/ApercuPro-LightItalic.eot');
+  src: url('../fonts/ApercuPro-LightItalic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/ApercuPro-LightItalic.woff') format('woff'),
+  url('../fonts/ApercuPro-LightItalic.ttf') format('truetype'),
+  url('../fonts/ApercuPro-LightItalic.svg#Intro') format('svg');
+  font-weight: 100;  
+  font-style: italic;
 }
 
-
 @font-face {
-  font-family: 'GothamPro';
-  src: url('../fonts/GothamPro-Bold.eot');
-  src: url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/GothamPro-Bold.woff') format('woff'),
-  url('../fonts/GothamPro-Bold.ttf') format('truetype'),
-  url('../fonts/GothamPro-Bold.svg#Intro') format('svg');
-  font-weight: 700;
+  font-family: 'ApercuPro';
+  src: url('../fonts/ApercuPro-Demibold.eot');
+  src: url('../fonts/ApercuPro-Demibold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/ApercuPro-Demibold.woff') format('woff'),
+  url('../fonts/ApercuPro-Demibold.ttf') format('truetype'),
+  url('../fonts/ApercuPro-Demibold.svg#Intro') format('svg');
+  font-weight: 600;  
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GothamPro';
-  src: url('../fonts/GothamPro-Black.eot');
-  src: url('../fonts/GothamPro-Black.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/GothamPro-Black.woff') format('woff'),
-  url('../fonts/GothamPro-Black.ttf') format('truetype'),
-  url('../fonts/GothamPro-Black.svg#Intro') format('svg');
-  font-weight: 800;
-  font-style: italic;
+  font-family: 'ApercuPro';
+  src: url('../fonts/ApercuPro-Bold.eot');
+  src: url('../fonts/ApercuPro-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/ApercuPro-Bold.woff') format('woff'),
+  url('../fonts/ApercuPro-Bold.ttf') format('truetype'),
+  url('../fonts/ApercuPro-Bold.svg#Intro') format('svg');
+  font-weight: 700;  
+  font-style: normal;
 }
-
-
-
