--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -25,12 +25,14 @@ body {
     line-height:normal;
 }
 
+
+
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section { 
     display:block;
 }
 
-nav ul {
+ ul {
     list-style:none;
 }
 
