--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@ $icon-font-path: '../fonts/';
 @import "_nice-select";
 @import "_header";
 @import "_footer";
+@import "_cart-popup";
 @import "_page";
 
 @import "_other.scss";  
