--- a/app/styles/_cart-popup.scss
+++ b/app/styles/_cart-popup.scss
@@ -21,7 +21,9 @@ $blue-color: #3c4f90;
 	font-size: 14px;
 	z-index: 10;
 	display: none;
-
+	-webkit-box-shadow: 0px 3px 31px 0px rgba(204,204,204,1);
+	-moz-box-shadow: 0px 3px 31px 0px rgba(204,204,204,1);
+	box-shadow: 0px 3px 31px 0px rgba(204,204,204,1);
 	padding: 15px 11px;
 
 	&:after {
