--- a/app/styles/_main-page.scss
+++ b/app/styles/_main-page.scss
@@ -96,7 +96,7 @@ $blue-color: #3c4f90;
 	}
 
 	.content {
-		//max-width: 1000px;
+		padding-bottom: 1.2rem;
 		margin: 0 auto;
 	}
 
@@ -108,12 +108,8 @@ $blue-color: #3c4f90;
 		margin-top: 40px;
 	}
 
-	.content-item {
-		width: calc(33.333333% - 30px);
-    max-width: 350px;
-   	margin: 0 15px 45px;
+	.content-item {     
     height: 245px;
-
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -157,7 +153,84 @@ $blue-color: #3c4f90;
 		background-size: cover;
 	}
 
+
+
 	//end-section-2
 
-}
+	//section-3
+
+	.section-3 {
+		background: #fff;
+	}
+
+	.content-wrap {
+		display: flex;
+		justify-content: flex-start;
+		align-items: stretch;
+		align-content: stretch;
+		flex-wrap: wrap;
+		margin-top: 35px;
+
+		position: relative;
+	}
+
+	.content-img-wrap {
+		margin: 5px;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+
+	}
+
+	.img-wrap-1 {
+		//max-width: 300px;
+		width: calc(30.85% - 10px);
+		height: 400px;
+	}
+
+	.img-wrap-2 {
+		//max-width: 200px;
+		width: calc(20.90% - 10px);		
+		height: calc(200px - 5px);
+	}
+
+	.img-wrap-3 {
+		//max-width: 340px;
+		width: calc(33.73% - 10px);	
+		height: calc(200px - 5px);
+	}
+
+	.img-wrap-4 {
+		//max-width: 135px;
+		width: calc(14.43% - 10px);
+		height: calc(200px - 5px);
+	}	
+
+	.img-wrap-5 {
+		//max-width: 135px;
+		width: calc(39.80% - 10px);
+		height: calc(200px - 5px);
+
+		position: absolute;
+		left: 30.85%;
+		top: 50%;
+	}
+
+	.img-wrap-6 {
+		//max-width: 135px;
+		width: calc(29.35% - 10px);
+		height: calc(200px - 5px);
+
+		position: absolute;
+		right: 0;
+		top: 50%;
+	}
+
+	//end section-3
+
+}	
+
+
 
