--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -8,7 +8,27 @@ $icon-font-path: '../fonts/';
 
 		.slider-center-block {
 			width: 100%;
-		}		
+		}
+
+		//section-2
+
+ 		.content-item {
+			width: 100%;
+			margin: 0 auto 5px auto;
+
+			height: 120px;	    
+		}
+
+		.content-item.bg-2{
+			order: -1;
+		}
+
+		.content {
+			padding-left: 5px;
+			padding-right: 5px;
+		}
+
+		//end section-2	
 
 	}	
 
