--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -175,7 +175,14 @@ $icon-font-path: '../fonts/';
 			display: block;
  		}
 
+ 		//section-2
 
+ 		.content-item {
+			width: calc(50% - 30px);
+			margin: 0 15px 30px;	    
+		}
+
+		//end section-2
 
 	}	
 
