--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -1,5 +1,11 @@
 $icon-font-path: '../fonts/';
 
+$page-color: #393939;
+$gray-color: #858585;
+$border-color: #d8d8d8;
+$black-color: #111111;
+$blue-color: #3c4f90;
+
 @media only screen and (max-width: 767px) {
 
   //HEADER
@@ -183,6 +189,127 @@ $icon-font-path: '../fonts/';
 		}
 
 		//end section-2
+
+		//section-3
+
+	.responsive-slider {
+		width: 320px;
+		height: 300px;
+		margin: 35px auto 0;
+
+		.slick-dots {
+			bottom: 30px;
+
+			li {
+				width: 8px;
+				height: 8px;
+			}
+
+		}
+
+		.slick-prev {
+			background: #fff;
+			width: 50px;
+			height: 50px;
+			border-radius: 50%;
+
+			bottom: 15px;
+			left: 15px;
+			top: auto;
+			margin-top: 0;
+			z-index: 10;
+
+			&:after {
+				content: "";
+				display: block;
+				width: 8px;
+				height: 8px;
+				background: transparent;
+				border-top: 2px solid #acacac;
+				border-left: 2px solid #acacac;
+				transform: rotate(-45deg);
+
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				margin-left: -4px;
+				margin-top: -4px;				
+			}
+
+		}
+
+		.slick-next {
+			background: #fff;
+			width: 50px;
+			height: 50px;
+			border-radius: 50%;
+
+			bottom: 15px;
+			right: 15px;
+			top: auto;
+			margin-top: 0;
+			z-index: 10;
+
+			&:after {
+				content: "";
+				display: block;
+				width: 8px;
+				height: 8px;
+				background: transparent;
+				border-top: 2px solid #acacac;
+				border-left: 2px solid #acacac;
+				transform: rotate(135deg);
+
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				margin-left: -4px;
+				margin-top: -4px;				
+			}
+
+		}
+
+	}	
+
+	.content-img-wrap {
+		margin: 0;
+	}
+
+	.img-wrap-1 {
+		width: 100%;
+		height: 100%;
+	}
+
+	.img-wrap-2 {
+		width: 100%;
+		height: 100%;
+	}
+
+	.img-wrap-3 {
+		width: 100%;
+		height: 100%;
+	}
+
+	.img-wrap-4 {
+		width: 100%;
+		height: 100%;
+	}	
+
+	.img-wrap-5 {
+		width: 100%;
+		height: 100%;
+
+		position: static;		
+	}
+
+	.img-wrap-6 {
+		width: 100%;
+		height: 100%;
+
+		position: static;		
+	}
+
+	//end section-3
 
 	}	
 
