--- a/app/styles/_min-1025.scss
+++ b/app/styles/_min-1025.scss
@@ -1,10 +1,13 @@
 $icon-font-path: '../fonts/';
 
-@media only screen and (min-width: 1025px) {
+$page-color: #393939;
+$gray-color: #858585;
+$border-color: #d8d8d8;
+$black-color: #111111;
+$blue-color: #3c4f90;
+
+@media only screen and (min-width: 1025px) {	
 	
-	body {
-		overflow-x: visible; 
-	}
 
    //HEADER
 
