--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,4 +27,5 @@ $icon-font-path: '../fonts/';
 @import "_max-667.scss";
 @import "_max-540.scss";
 @import "_max-375.scss";
+@import "_max-320.scss";
   
