--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -75,5 +75,57 @@ body {
 
 }
 
+.button-wrap {
+	text-align: center;
+}
+
+//прозрачная кнопка
+
+.title-button {
+		color: #fff;
+		font-size: 16px;
+		font-weight: 600;
+		text-align: center;
+		border: 1px solid #fff;
+		border-radius: 3px;
+		background: transparent;
+		display: inline-block;
+		padding: 12px 21px;
+		margin-top: 35px;
+
+		&:hover,
+		&:focus,
+		&:active {
+			color: #fff
+		}
+	}
+
+	.title-button.title-button-color {
+			color: #6674a8;			
+			border: 1px solid #6674a8;			
+
+			&:hover,
+			&:focus,
+			&:active {
+				background:#6674a8;
+				color: #fff; 
+				text-decoration: none;
+				transition: background .5s ease;
+			}
+			
+		} 
+
+	.block-title {
+		font-size: 24px;
+		font-weight: 400;
+		color: #000;
+		text-align: center;
+		letter-spacing: 1px;		
+	}
+
+
+
+
+
 
 
