--- a/app/styles/_main-page.scss
+++ b/app/styles/_main-page.scss
@@ -23,19 +23,7 @@ $blue-color: #3c4f90;
 		z-index: 10;
 		text-align: center;
 	}
-
-	.title-button {
-		color: #fff;
-		font-size: 16px;
-		font-weight: 600;
-		text-align: center;
-		border: 1px solid #fff;
-		border-radius: 3px;
-		background: transparent;
-		display: inline-block;
-		padding: 12px 21px;
-		margin-top: 35px;
-	}
+	
 
 	//slider
 
@@ -93,12 +81,13 @@ $blue-color: #3c4f90;
 
 	.section-2 {
 		background: #fff8f8;
-	}
 
-	.content {
+		.content {
 		padding-bottom: 1.2rem;
 		margin: 0 auto;
-	}
+		}
+
+	}	
 
 	.content-list {
 		display: flex;
@@ -161,6 +150,7 @@ $blue-color: #3c4f90;
 
 	.section-3 {
 		background: #fff;
+
 	}
 
 	.content-wrap {
@@ -176,6 +166,7 @@ $blue-color: #3c4f90;
 
 	.content-img-wrap {
 		margin: 5px;
+		overflow: hidden;
 
 		img {
 			width: 100%;
@@ -229,6 +220,145 @@ $blue-color: #3c4f90;
 	}
 
 	//end section-3
+
+	//section-4
+
+	.section-4 {
+		background: #fff8f8;
+	}
+
+	.slider-content {
+		margin-top: 80px;
+
+		.slick-dots {
+			bottom: -80px;
+
+			li {
+				width: 9px;
+				height: 9px;
+			}
+
+			.slick-active {
+				background: #000;
+			}
+
+		}
+
+	}
+
+	.feedback-item {
+		width: 50%;
+		text-align: left;		
+
+		.img-wrap {
+			width: 140px;
+			height: 140px;
+			border-radius: 3px;
+			overflow: hidden;					
+
+			img {
+				width: 100%;	
+				border-radius: 3px;			 
+			}
+
+		}
+
+	}
+
+	.feedback-left-block {
+		display: inline-block;
+		vertical-align: top;
+		text-align: left;
+
+		.user-name {
+			display: none;
+		}
+
+	}
+
+	.feedback-link {
+		display: inline-block;
+		font-size: 14px;
+		font-weight: 700;
+		color: #426995;
+		text-decoration: underline;
+		margin-top: 15px;
+
+		&:hover,
+		&:focus,
+		&:active {
+			color: #426995;
+			text-decoration: none;
+		}
+
+	}
+
+	.feedback-right-block {
+		display: inline-block;		
+		margin-left: -20px;
+		text-align: left;
+	}
+
+	.user-name {
+		color: #727272;
+		font-size: 16px;
+		font-weight: 600;
+		margin: 12px auto 12px 30px;
+	}
+
+	.feedback-text {
+		color: $page-color;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 1.5em;
+		padding: 0 18px;
+		border-bottom: 13px solid #fff;
+		border-top: 13px solid #fff;
+		background: #fff;
+		max-width: 330px;
+		max-height: 200px; 		
+		border-radius: 5px;
+		overflow: hidden;
+	}
+
+	//end section-4
+
+	//section-5
+
+	.section-5 {
+		background: #fff;
+
+		.title-button {
+			margin-top: 50px;
+			width: 200px;
+		}
+	}
+
+	.main-form {
+		text-align: center;
+		margin-top: 55px;
+
+		::-webkit-input-placeholder {color: #919191; font-size: 16px; font-weight: 400;}
+		::-moz-placeholder          {color: #919191; font-size: 16px; font-weight: 400;}/* Firefox 19+ */
+		:-moz-placeholder           {color: #919191; font-size: 16px; font-weight: 400;}/* Firefox 18- */
+		:-ms-input-placeholder      {color: #919191; font-size: 16px; font-weight: 400;}
+
+		input {
+			display: block;
+			text-align: center;
+			margin: 0 auto;
+		}
+	}
+
+	.mail-input {
+		width: 240px;
+		border: none;
+		border-bottom: 1px solid #c4c4c4;
+		padding-bottom: 12px;
+		color: $page-color;
+	}
+
+	//end section-5
 
 }	
 
