--- a/app/styles/_min-768.scss
+++ b/app/styles/_min-768.scss
@@ -73,9 +73,21 @@ $blue-color: #3c4f90;
 
     //end section-2
 
+    //section-4
+
+  .feedback-item {    
+    text-align: center;
+
+    &:nth-child(2n) {
+      text-align: center;
+    }
+
+  }  
+
+  //end section-4
+
   } 
 
-//END MAIN-PAGE 
-  
+//END MAIN-PAGE   
   
 }
