--- a/app/styles/_min-992.scss
+++ b/app/styles/_min-992.scss
@@ -24,9 +24,29 @@ $blue-color: #3c4f90;
 		}
 
 		//end section-2
-  }		
 
-	//END MAIN-PAGE	
-  
+		//section-4
+
+		.section-4 {
+
+			.content {
+    			padding: 3.6rem 0 6.6rem;
+    		}
+
+		}
+
+	  .feedback-item {    
+	    text-align: left;
+
+	    &:nth-child(2n) {
+	      text-align: right;
+	    }
+
+	  }  
+
+  //end section-4		
+  }
+
+	//END MAIN-PAGE	 
   
 }
