--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -267,8 +267,8 @@ $blue-color: #3c4f90;
 		margin: 0 auto;
 		text-align: center;
 
-		.footer-net-list {
-			margin-top: 20px;
+		.footer-net-list {			
+			margin: 20px auto 0;
 		}
 
 	}
