--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -68,6 +68,7 @@ $blue-color: #3c4f90;
 	.footer-net-list {
 		text-align: justify;
 		padding-top: 10px;
+		width: 133px;
 
 		&:after {
 			content: "";
