catalog filter dev

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -140,4 +140,13 @@ $blue-color: #3c4f90;
 
 	}
 
+	.page-name {
+		font-size: 18px;
+		font-weight: 600;
+		color: #9f64a7;
+		margin-top: 7px;		
+		margin-left: 40px;
+    text-align: left;
+	}
+
 }
