--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,7 @@ $icon-font-path: '../fonts/';
 @import "_footer";
 @import "_cart-popup";
 @import "_main-page";
+@import "_catalog-page";
 
 @import "_other.scss";  
 
