--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -351,5 +351,254 @@ $blue-color: #3c4f90;
 	}	
 
 	//END FOOTER
+
+	//CATALOG-PAGE
+
+  .catalog-page {
+
+  	.catalog-menu-wrap {
+  		border-bottom: none;
+  		border-top: none;
+  		height: auto;
+  	}
+
+  	.catalog-nav {  	
+
+	  	.nice-select {
+	  		display: block;
+	    	position: relative;
+	    	border-radius: 0;
+	    	border: none;
+	    	border-bottom: 1px solid #ffe3e3;
+	    	width: 100%;
+	    	text-align: center;			
+
+				&.open {	    	
+
+	 		 		span {
+
+	 		 			&:after {
+		      		transform: rotate(-135deg);
+		      		margin-top: 2px;
+	 		 			}
+
+	 		 		}
+
+	 		 		.list {
+	 		 			display: block;
+
+	 		 		}
+
+	    	}
+
+	    	span {
+	    		display: inline-block;
+	    		text-align: center;
+	    		color: #8675d0;
+	    		font-weight: 600;
+	    		font-size: 18px;
+
+	    		&:after {
+						content: "";
+						display: inline-block;
+						margin-left: 10px;
+						width: 8px;
+						height: 8px;
+						background: transparent;
+						vertical-align: middle;
+						
+						border-bottom: 2px solid #8675d0;
+						border-right: 2px solid #8675d0;
+						transform: rotate(45deg);
+
+						//position: absolute;
+						top: 50%;
+						right: 15px;					
+						margin-top: -4px;				
+					}
+
+	    	}
+
+	    	.list {
+	    		width: 100%;
+	    		position: static;
+	    		border-radius: 0;
+	    		margin-top: 1px;
+	    		border: none;
+	    		box-shadow: none;
+	    		display: none; 
+	    		opacity: 1;   		 
+
+	    		li {
+						color: #adadad;
+						font-size: 18px;
+						font-weight: 600;
+						text-align: center;
+
+						&:first-child {
+	        		display: none;
+	        	}
+
+						&:hover {
+							background: transparent;
+							color: #304384;
+						}
+
+						&.selected {
+							background: transparent;
+						}
+
+	    		}
+
+	    	}
+	      
+	  	}
+
+  	}	
+
+  	.catalog-menu {
+
+      select {
+        display: inline-block;    
+
+      }      
+
+	    .catalog-menu-list {
+	    	display: none;
+	    }
+ 	 
+		} 
+
+		//left-column
+
+		.left-column {
+			margin-top: 0;
+			width: 100%;
+			float: none;
+		}
+
+		 .page-menu {
+
+		 	.page-menu-list {
+		 		display: none;
+		 	}
+      
+       .nice-select {
+        display: inline-block;
+      }
+
+      select {
+        display: inline-block;
+
+      }
+
+    }
+
+		//end left-column 
+
+		//right-column 
+
+		.right-column {
+			margin-top: 0;
+			float: none;	
+			width: 100%;
+		}
+
+		.filter-mobile-menu {
+
+			&.open {
+				
+				.filter-name {
+					
+					 &:after {
+	    			transform: rotate(-135deg);
+	      		margin-top: 2px;
+	    		}
+
+				}
+
+			}
+
+		}
+
+		.filter-name {
+			display: inline-block;
+	    text-align: center;
+	    color: #8675d0;
+	    font-weight: 600;
+	    font-size: 18px;
+	    border-bottom: 1px solid #ffe3e3;
+	    text-align: center;
+	    background: #fff;
+	    width: 100%;
+	    height: 42px;
+	    padding: 9px 0;
+	    cursor: pointer;
+
+	    &:after {
+	    		content: "";
+					display: inline-block;
+					margin-left: 10px;
+					width: 8px;
+					height: 8px;
+					background: transparent;
+					vertical-align: middle;
+					
+					border-bottom: 2px solid #8675d0;
+					border-right: 2px solid #8675d0;
+					transform: rotate(45deg);
+
+					//position: absolute;
+					top: 50%;
+					right: 15px;					
+					margin-top: -4px;				
+	    }
+
+		}
+
+		.filter-list {			
+	  		display: none;
+	  		background: #fff;
+	  		padding-top: 20px;
+
+	  		.filter-item {
+	  			display: block;
+	  			text-align: center;
+	  			height: auto;
+
+	  		}
+
+	    &.is-show {
+			display: block;
+    	}
+
+    	.label {
+    		display: block;    		
+    	}
+
+    	input {
+    		width: 115px;
+    	}
+
+    	.nice-select {
+    		width: 290px;
+    	}
+
+    	.filter-item-sm {
+
+    		.nice-select {
+    		width: 290px;
+    		}
+
+    	}    		
+
+		}
+
+		//end right-column
   
+	}
+
+//END CATALOG-PAGE
+
+
 }
