catalog filter button dev

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -123,6 +123,18 @@ body {
 		letter-spacing: 1px;		
 	}
 
+	//фиолетовая кнопка
+
+	.color-button {
+		background: #8675d0;
+		color: #fff;
+		font-size: 16px;
+		font-weight: 400;
+		height: 45px;
+		text-align: center;
+		vertical-align: middle;
+	}
+
 
 
 
