--- a/app/styles/_min-768.scss
+++ b/app/styles/_min-768.scss
@@ -158,6 +158,11 @@ $blue-color: #3c4f90;
 
       .filter-list {         
         text-align: left;
+
+        .hidden-sm {
+          display: none;
+        }
+
       }   
 
       //end right-column
