--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -277,6 +277,24 @@ $blue-color: #3c4f90;
 
 //END FOOTER
 
+//CATALOG-PAGE
+
+
+
+	.catalog-page {
+
+	//catalog
+
+		.catalog-item {
+			width: 100%;
+		}
+
+	//end catalog
+
+	}		
+
+//END CATALOG-PAGE		
+
  
 }
 
