--- a/app/styles/_catalog-page.scss
+++ b/app/styles/_catalog-page.scss
@@ -63,7 +63,8 @@ $blue-color: #3c4f90;
 	//menu
 
 	.page-content {
-		background: #fef7f7;		
+		background: #fef7f7;
+		padding: 0 0 3rem 0;	
 	}
 
 	.left-column {
@@ -76,6 +77,7 @@ $blue-color: #3c4f90;
 	.right-column {
 		margin-top: 30px;
 		width: calc(100% - 250px - 15px);
+		//max-width: 735px;
 		float: right;
 	}
 
@@ -131,6 +133,7 @@ $blue-color: #3c4f90;
 			display: inline-block;
 			padding-left: 8px;
 			width: 150px;
+			//width: 135px;
 			line-height: 29px;
 
 				span {
@@ -235,6 +238,118 @@ $blue-color: #3c4f90;
 		font-weight: 400;
 		font-size: 16px;
 	}
+
+	//catalog-block
+
+	.catalog-block {
+		//margin-top: 30px;
+		margin-left: -15px;
+		margin-right: -15px;
+
+		.img-wrap {
+			width: 100%;
+			overflow: hidden;
+			border-radius: 5px;
+			min-height: 200px;
+
+			img {
+				width: 100%;
+				border-radius: 5px;
+			}
+
+		}
+
+	}
+	
+	.catalog-item {
+		margin-bottom: 30px;
+	}	
+
+		.info-block {
+			margin-top: 7px;
+
+			a {
+				text-decoration: none;
+				
+				&:hover,
+				&:focus,
+				&:active {
+					text-decoration: none;
+				}
+
+			}
+
+		}
+
+		.art {
+			display: block;
+			font-size: 14px;
+			color: #838282;
+			font-weight: 600;
+
+		}
+
+		.name {
+			display: block;
+			font-size: 16px;
+			font-weight: 600;
+			color: $page-color;
+			margin: 8px auto 7px 0;
+			height: 20px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+
+		.price {
+			display: block;
+			font-size: 16px;
+			font-weight: 600;
+			color: $page-color;
+		}
+
+	
+
+	.catalog-button {
+		width: 100%;
+		border-radius: 3px;
+		margin-top: 15px;
+	}
+
+	.paging {
+		text-align: center;
+
+		li {
+			display: inline-block;
+			cursor: pointer;
+			border: 1px solid #8474d6;
+			background: transparent;
+			color: #8474d6;
+			font-size: 16px;
+			font-weight: 400;
+			width: 40px;
+			height: 40px;
+			border-radius: 3px;
+			text-align: center;
+			vertical-align: middle;
+			padding: 10px 0;
+
+			&:hover {
+				background: #8474d6;
+				color: #fff;
+				transition: background .5s ease;
+			}
+
+		}
+
+		.page-active {
+			background: #8474d6;
+			color: #fff;
+		}
+
+	}
+
+	//end catalog-block
 
 
 }
