--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,8 @@ $icon-font-path: '../fonts/';
 @import "_cart-popup";
 @import "_main-page";
 @import "_catalog-page";
+@import "_product-page";
+
 
 @import "_other.scss";  
 
