--- a/app/styles/_product-page.scss
+++ b/app/styles/_product-page.scss
@@ -14,6 +14,8 @@ $blue-color: #3c4f90;
 
 	.breadcrumb-list {
 		margin-bottom: 30px;
+		position: relative;
+		z-index: 10;
 
 		 li {
 		 		float: left;
@@ -53,6 +55,7 @@ $blue-color: #3c4f90;
 	.right-column {
 		width: calc(100% - 360px - 25px);
 		float: right;
+		color: $black-color;
 	}
 
 	.product-slider-for {
@@ -83,11 +86,11 @@ $blue-color: #3c4f90;
 		}		
 
 		.img-wrap {
-			width: 80px;
+			width: 80px !important;
 			height: 80px;
 			overflow: hidden;
 			border-radius: 5px;			
-			margin-right: 15px;
+			margin-right: 15px;			
 
 
 			img {
@@ -96,7 +99,176 @@ $blue-color: #3c4f90;
 				border-radius: 5px;
 			}
 
+		}
+
+		.slick-slide {
+			opacity: 0.5;
 		}	
+
+		.slick-current {
+			opacity: 1;
+		}
+
+	}	
+
+
+	
+//right-column 
+
+	.art {
+		font-size: 14px;
+		font-weight: 400;
+		color: #707070;
+	}
+
+	.product-title {
+		margin-top: 10px;		
+		font-size: 20px;
+		font-weight: 400;
+	}
+
+	.info-block {
+		margin: 23px 0;
+	}
+
+	.info-title {
+		text-transform: uppercase;
+		color: #2e4288;
+		font-size: 13px;
+		font-weight: 700;
+		letter-spacing: 1px;
+		margin-bottom: 3px;
+	}
+
+	.info-text {
+		font-size: 15px;
+		padding: 5px 0;
+	}
+
+	.filter-title {
+		text-align: center;
+		margin-bottom: 10px;
+		color: #5f698d;
+	}
+
+	.product-filter-item {
+		width: 125px;
+		display: inline-block;
+		text-align: center;
+		margin-right: 30px;
+
+		&:last-child {
+			margin-right: 0;
+		}
+
+		.nice-select {
+			border-radius: 0;
+			border: 1px solid $border-color;
+			width: 100%;
+
+			&:after {
+				border-bottom: 1px solid #959595;
+		    border-right: 1px solid #959595;
+		    content: '';
+		    display: block;
+		    height: 6px;
+		    margin-top: -4px;
+		    pointer-events: none;
+		    position: absolute;
+		    right: 12px;
+		    top: 50%;
+		    -webkit-transform-origin: 66% 66%;
+		    transform-origin: 66% 66%;
+		    -webkit-transform: rotate(45deg);
+		    transform: rotate(45deg);
+		    -webkit-transition: all 0.15s ease-in-out;
+		    transition: all 0.15s ease-in-out;
+		    width: 6px;
+			}
+
+			&.open {
+
+				&:after {
+	      transform: rotate(-135deg);
+			}
+
+		}
+
+		span {
+			font-size: 15px;
+			font-weight: 700;
+			color: #426995;
+		}
+
+		.list {
+			width: 100%;
+			border-radius: 0;			
+
+			.option {
+				font-size: 15px;
+				font-weight: 700;
+				color: #426995;
+				min-height: 35px;
+				line-height: 35px;
+				
+				}
+
+			}
+
+		}	
+
+	}
+
+	.counter-list {
+		margin-top: 20px;
+	}
+
+	.counter-item {
+		display: inline-block;
+	}
+
+	.counter-wrap {
+		width: 130px;
+		border: 1px solid $border-color;
+		height: 42px;
+		text-align: center;
+		vertical-align: middle;
+		font-size: 13px;
+		margin-top: 10px;
+
+		a {
+			display: inline-block;
+			cursor: pointer;
+			width: 40px;
+			height: 100%;
+			color: #426995;
+			padding: 11px 0;
+			font-weight: 700;
+
+			&:hover {
+				text-decoration: none;
+				color: #426995;
+			}
+
+		}
+
+	}
+
+	.left-btn {
+		border-right: 1px solid $border-color;
+		float: left;
+	}
+	.right-btn {
+		border-left: 1px solid $border-color;
+		float: right;
+	}
+
+	.counter {
+		display: inline-block;
+		height: 100%;
+		color: #426995;
+		padding: 11px 0;
+		font-weight: 700;
 	}
 
 }
