--- a/app/styles/_min-1025.scss
+++ b/app/styles/_min-1025.scss
@@ -60,5 +60,15 @@ $blue-color: #3c4f90;
   }  
 
   //END CATALOG-PAGE
+
+  //PRODUCT-PAGE 
+
+  .product-page {
+
+  	
+
+  }
+
+  //END PRODUCT-PAGE 
   
 }
