--- a/app/styles/_min-992.scss
+++ b/app/styles/_min-992.scss
@@ -48,5 +48,18 @@ $blue-color: #3c4f90;
   }
 
 	//END MAIN-PAGE	 
+
+	//PRODUCT-PAGE 
+
+  .product-page {
+
+  	.slider-product-content {
+			width: 810px; 
+		}
+
+  }
+
+  //END PRODUCT-PAGE 
+  
   
 }
