--- a/app/styles/_sprite.scss
+++ b/app/styles/_sprite.scss
@@ -16,9 +16,15 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
-.icon-cart-close {
+.icon-button {
   background-image: url(../images/sprite.png);
   background-position: -64px -40px;
+  width: 18px;
+  height: 16px;
+}
+.icon-cart-close {
+  background-image: url(../images/sprite.png);
+  background-position: -44px -20px;
   width: 16px;
   height: 16px;
 }
@@ -30,31 +36,31 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-fb-footer {
   background-image: url(../images/sprite.png);
-  background-position: -24px 0px;
+  background-position: -44px 0px;
   width: 20px;
   height: 20px;
 }
 .icon-fb-head {
   background-image: url(../images/sprite.png);
-  background-position: -44px 0px;
+  background-position: 0px -38px;
   width: 20px;
   height: 20px;
 }
 .icon-insta-footer {
   background-image: url(../images/sprite.png);
-  background-position: 0px -38px;
+  background-position: -20px -38px;
   width: 20px;
   height: 20px;
 }
 .icon-insta-head {
   background-image: url(../images/sprite.png);
-  background-position: -20px -38px;
+  background-position: 0px -18px;
   width: 20px;
   height: 20px;
 }
 .icon-menu-close {
   background-image: url(../images/sprite.png);
-  background-position: 0px -18px;
+  background-position: -64px 0px;
   width: 20px;
   height: 20px;
 }
@@ -66,25 +72,25 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 .icon-tel-footer {
   background-image: url(../images/sprite.png);
-  background-position: -64px -20px;
+  background-position: 0px -58px;
   width: 20px;
   height: 20px;
 }
 .icon-viber-footer {
   background-image: url(../images/sprite.png);
-  background-position: 0px -58px;
+  background-position: -40px -38px;
   width: 20px;
   height: 20px;
 }
 .icon-vk-footer {
   background-image: url(../images/sprite.png);
-  background-position: -40px -38px;
+  background-position: -24px 0px;
   width: 20px;
   height: 20px;
 }
 .icon-vk-head {
   background-image: url(../images/sprite.png);
-  background-position: -64px 0px;
+  background-position: -64px -20px;
   width: 20px;
   height: 20px;
 }
