--- a/app/styles/_min-992.scss
+++ b/app/styles/_min-992.scss
@@ -57,6 +57,11 @@ $blue-color: #3c4f90;
 			width: 810px; 
 		}
 
+		.next-button,
+		.prev-button {
+			display: block;
+		}
+
   }
 
   //END PRODUCT-PAGE 
