--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -659,8 +659,13 @@ $blue-color: #3c4f90;
 		}
 
 		.slider-product-content {
-			width: 810px; 
+			width: 100%; 
 		}
+
+		.next-button,
+    .prev-button {
+      display: none;
+    }
 
 	}	
 
