--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -329,6 +329,18 @@ $blue-color: #3c4f90;
 
 //END PRODUCT PAGE	
 
+//NEWS-PAGE
+
+.news-page {
+
+	.content-item {
+		height: auto;
+	}
+
+}
+
+//END-NEWS-PAGE
+
  
 }
 
