--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -96,7 +96,10 @@ body {
 		&:hover,
 		&:focus,
 		&:active {
-			color: #fff
+			color: $page-color;
+			background: rgba(255,255,255,0.7);
+			text-decoration: none;
+			transition: background .5s ease;
 		}
 	}
 
@@ -229,6 +232,55 @@ body {
 		width: 100%;
 		border-radius: 3px;
 		margin-top: 15px;
+	}
+
+}
+
+
+.paging {
+	text-align: center;
+
+	li {
+		display: inline-block;
+		cursor: pointer;
+		border: 1px solid #8474d6;
+		background: transparent;
+		color: #8474d6;
+		font-size: 16px;
+		font-weight: 400;
+		width: 40px;
+		height: 40px;
+		border-radius: 3px;
+		text-align: center;
+		vertical-align: middle;
+		padding: 10px 0;
+
+		a {
+				font-size: 16px;
+				color: #000;
+				text-decoration: none;
+
+				&:hover,
+				&:focus,
+				&:active {
+					text-decoration: none;
+					background: transparent;
+					color: #000;
+				}
+
+			}				
+
+		&:hover {
+			background: #8474d6;
+			color: #fff;
+			transition: background .5s ease;
+		}
+
+	}
+
+	.page-active {
+		background: #8474d6;
+		color: #fff;
 	}
 
 }
