--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,7 @@ $icon-font-path: '../fonts/';
 @import "_main-page";
 @import "_catalog-page";
 @import "_product-page";
+@import "_news-page";
 
 
 @import "_other.scss";  
