--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -16,19 +16,6 @@ body {
 		
 }
 
-.col-left {
-	padding-left: 0;
-}
-
-.col-right {
-	padding-right: 0;
-}
-
-.col-center {
-	padding-left: 0;
-	padding-right: 0;
-}
-
 .icon {
 	vertical-align: top;
 	display: inline-block;
@@ -50,6 +37,14 @@ body {
 	color: #fff;
 	text-align: center;
 	line-height: 1.2em;
+}
+
+.title-description {
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 600;
+	margin-top: 21px;
 }
 
 .content {
@@ -74,6 +69,122 @@ body {
 	}
 
 }
+
+//main-slider
+
+.slider-wrap {
+		width: 100%;
+		height: 320px;
+		overflow: hidden;
+		position: relative;
+
+		.slick-dots {
+			text-align: center;
+			bottom: 15px;		
+
+		li {
+			display: inline-block;
+			width: 13px;
+			height: 13px;
+			background: #b5b5b3;
+			border-radius: 50%;
+			list-style: none;			
+
+			button {
+
+				&:before {
+					content: "";
+				}
+				
+			}
+
+		}
+
+			.slick-active {
+				background: #fff;
+			}
+
+		}
+
+	}
+
+	.slider-center-block {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 10;
+		text-align: center;
+	}
+	
+
+	//slider
+
+	.head-slider {
+		height: 100%;
+	}
+
+	.slick-list {
+		height: 100%;
+	}
+
+	.slick-track {
+		height: 100%;
+	}
+
+	.head-slider-item {
+		height: 100%;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+
+	}
+
+	.slick-dots {
+		text-align: center;
+		bottom: 15px;		
+
+		li {
+			display: inline-block;
+			width: 13px;
+			height: 13px;
+			background: #b5b5b3;
+			border-radius: 50%;
+			list-style: none;			
+
+			button {
+
+				&:before {
+					content: "";
+				}
+				
+			}
+
+		}
+
+		.slick-active {
+			background: #fff;
+		}
+
+	}
+
+//end main slider
+
+
+.content-list {
+		display: flex;		
+		align-items: center;
+		flex-wrap: wrap;
+}
+
+.content-item {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 
 .button-wrap {
 	text-align: center;
