--- a/app/styles/_min-992.scss
+++ b/app/styles/_min-992.scss
@@ -12,19 +12,15 @@ $blue-color: #3c4f90;
 		display: none;
 	}
 
+.content-item {
+		width: calc(33.333333% - 30px);		    
+}	
+
 	//MAIN-PAGE 
 
   .main-page {
 
-  	 //section-2
-
-		.content-item {
-	  		width: calc(33.333333% - 30px);
-	  		margin: 0 15px 45px;    
-		}
-
-		//end section-2
-
+  	 
 		//section-4
 
 		.section-4 {
@@ -58,7 +54,9 @@ $blue-color: #3c4f90;
 		}
 
 		.next-button,
-		.prev-button {
+		.prev-button,
+		.next-button-bot,
+		.prev-button-bot {
 			display: block;
 		}
 
