--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -621,6 +621,8 @@ $blue-color: #3c4f90;
 
 		.catalog-block {
 			margin-top: 30px;
+			margin-left: 0;
+			margin-right: 0;
 		}
 
 		//end catalog
