--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -677,5 +677,18 @@ $blue-color: #3c4f90;
 
 //END PRODUCT-PAGE
 
+//INSTASHOP-PAGE
+
+.instashop-page {
+	
+	.content {		
+		margin-left: 0;
+		margin-right: 0;
+	}
+
+}
+
+//END INSTASHOP-PAGE
+
 
 }
