--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,7 @@ $icon-font-path: '../fonts/';
 @import "_catalog-page";
 @import "_product-page";
 @import "_news-page";
+@import "_instashop-page";
 
 
 @import "_other.scss";  
